--- a/app/src/main/res/layout/fragment_branch.xml
+++ b/app/src/main/res/layout/fragment_branch.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BranchFragment">
+    tools:context=".admin.branchs.BranchFragment">
 
     <include
         android:id="@+id/include"
