--- a/app/src/main/res/layout/fragment_car_detail.xml
+++ b/app/src/main/res/layout/fragment_car_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CarDetailFragment">
+    tools:context=".customer.cars.CarDetailFragment">
 
     <include
         android:id="@+id/include"
