--- a/app/src/main/res/layout/fragment_catalog_services.xml
+++ b/app/src/main/res/layout/fragment_catalog_services.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CatalogServicesFragment">
+    tools:context=".admin.CatalogServicesFragment">
 
     <include
         android:id="@+id/include"
