--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -27,9 +27,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listCarsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/main_margin_top"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/enrollButton"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/titleCarsTextView" />
 
@@ -47,12 +48,14 @@
         android:id="@+id/enrollButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/main_start_margin"
-        android:layout_marginEnd="@dimen/main_end_margin"
-        android:text="Записаться"
         android:layout_marginTop="@dimen/main_margin_top"
+        android:text="Записаться"
+        android:layout_marginBottom="@dimen/height_bottom_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listCarsRecyclerView"
-        tools:layout_editor_absoluteX="89dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/nameCustomerTextView"
